asteria/core/tests/errors/elaboration_errors/cannot_synthesize_type_for_empty_case_term.asteriacore
x : forall {a : Type}. a
  = case Test$x of
  ;;
